# set_cover

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: setCover.hpp
src/: main.cpp
